--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Streamlit Dashboard</title>
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
 </head>
 <body>
     <iframe
         src="https://scooper.streamlit.app/?embed=true"
-        height="1200"
-        style="width: 100%; border: none;"
     ></iframe>
 </body>
 </html>
