--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Streamlit Dashboard</title>
+    <title>Scooper</title>
+    <link rel="icon" href="https://i.postimg.cc/Y0XLcpg7/scooper-s.png">
     <style>
         html, body {
             height: 100%;
